k8s/analytics-service-deployment.yaml
apiVersion: apps/v1

kind: Deployment 

metadata:
  name: analytics-service

spec:
  replicas: 1

  selector:
    matchLabels:
      app: analytics-service
  
  template:
    metadata:
      labels:
        app: analytics-service
    
    spec:
      - name: analytics-service
        image: docker-microservices-analytics-service:latest
        imagePullPolicy: IfNotPresent
        ports:
          - containerPort: 6000
