k8s/url-service-deployment.yaml
apiVersion: apps/v1

kind: Deployment

metadata:
  name: url-service
  namespace: url-shortener
  
spec:
  replicas: 3

  selector:
    matchLabels:
      app: url-service

  template:
    metadata:
      labels:
        app: url-service

    spec:
      containers:
        - name: url-service
          image: docker-microservices-url-service:latest
          imagePullPolicy: IfNotPresent

          ports:
            - containerPort: 5000

          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 100

          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 5
            periodSeconds:  10

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
