k8s/analytics-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: analytics-service
  namespace: url-shortener
spec:
  selector:
    app: analytics-service
  ports:
    - port: 6001
      targetPort: 6001
  type: ClusterIP
