k8s/url-service-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: url-service
  namespace: url-shortener
  
spec:
  selector:
    app: url-service

  ports:
    - port: 5000
      targetPort: 5000

  type: ClusterIP
