k8s/web-headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: url-shortener

spec:
  clusterIP: None

  selector:
    app: web

  ports:
    - port: 80
      targetPort: 80
