k8s/url-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress 

metadata:
  name: url-service-ingress
  namespace: url-shortener

spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:  
                name: url-service
                port: 
                  number: 5000
