k8s/postgres-network-policy.yaml
apiVersion: networking.k8s.io/v1

kind: NetworkPolicy

metadata:
  name: postgres-ingress
  namespace: url-shortener

spec:
  podSelector: # Applies to postgres pod 
    matchLabels:
      app: postgres
  
  policyTypes:  
    - Ingress 
  
  ingress:
    - from: # only pods labeled as app = url-service are allowed to send traffic to postgresql
        - podSelector:
            matchLabels:
              app: url-service
      
      ports:
        - protocol: TCP
          port: 5432 # only postgres port is allowed
